# motion-detection

./: .gitignore  CMakeLists.txt  README.md  app_summary.md  vcpkg.json
.github/workflows/: build-and-release.yml
src/: main.cpp
