cmake_minimum_required(VERSION 3.16)
project(motion_detection LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

find_package(OpenCV REQUIRED)

add_executable(motion_detection
    src/main.cpp
)

target_link_libraries(motion_detection PRIVATE ${OpenCV_LIBS})

if(MSVC)
    target_compile_options(motion_detection PRIVATE /W4 /permissive-)
else()
    target_compile_options(motion_detection PRIVATE -Wall -Wextra -Wpedantic)
endif()
